export interface Securable {
    isSecured(): boolean
}